# nums

./: .gitignore  Scarb.toml  dojo_e2eappchain.template.toml  dojo_e2eappchain.toml  dojo_e2esettlement.toml  dojo_katana.toml  dojo_mainnet.toml  dojo_sepolia.toml  manifest_mainnet.json  manifest_sepolia.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  torii_mainnet.toml  vocs.config.ts
client/: .env.production  .env.sample  package.json  vite.config.ts
client/public/: sw.js
client/src/: App.tsx  constants.ts  main.tsx  register-service-worker.ts  vite-env.d.ts
contracts/: Scarb.toml
contracts/src/: constants.cairo  lib.cairo  store.cairo
docs/: BRIDGE_ARCHITECTURE.md  BRIDGE_TEST_COVERAGE.md
docs/pages/: release-notes.mdx
hyperframes/: .gitignore  MIGRATION_STATUS.md  POC_REPORT.md  index.html  package.json  tsconfig.json  vite.config.ts
hyperframes/scripts/: render-game.ts  render-poc.ts
hyperframes/src/: audio-timeline.ts  fixtures.ts  fonts.ts  frame-store.ts  hf-protocol.ts  main.tsx  poc-app.tsx  replay.tsx  scene-props.ts  styles.css
ios/: PrivacyInfo.xcprivacy
ios/Nums WebApp/: AppDelegate.swift  Info.plist  Printer.swift  PushNotifications.swift  SceneDelegate.swift  Settings.swift  ViewController.swift  WebView.swift
ios/Nums.xcodeproj/: project.pbxproj
remotion/: package.json  remotion.config.ts  tailwind.config.ts  tsconfig.json
tests/e2e/: .gitignore  Cargo.toml  README.md
tests/e2e/src/: constants.rs  harness.rs  katana.rs  lib.rs  messaging.rs  rollup.rs  sozo.rs
tests/e2e/tests/: happy_path.rs
(+89 files in other folders)
