[package]
name = "nums-e2e"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone crate — intentionally NOT a member of the workspace at the repo
# root (which is a Scarb workspace, not Cargo). Build it with
# `cargo test --manifest-path tests/e2e/Cargo.toml --release -- --nocapture`.

[lib]
path = "src/lib.rs"

[[test]]
name = "happy_path"
path = "tests/happy_path.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
hex = "0.4"

# Pinned to versions that work with Katana 1.7.x JSON-RPC v0.9.
starknet = "0.17"
starknet-crypto = "0.8"

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }
